--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "tailwindcss": "^3.4.0",
     "vite": "^6.0",
     "vue": "^3.3.13"
+  },
+  "dependencies": {
+    "vue-select": "^4.0.0-beta.6"
   }
 }
