--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "vue": "^3.3.13"
   },
   "dependencies": {
+    "chart.js": "^3.9.1",
+    "vue-chart-3": "^3.1.8",
     "vue-select": "^4.0.0-beta.6"
   }
 }
