--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
         "laravel/jetstream": "^5.3",
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
+        "laravel/scout": "^10.12",
         "laravel/tinker": "^2.9",
         "mcamara/laravel-localization": "^2.2",
+        "meilisearch/meilisearch-php": "^1.12",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
