--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "chart.js": "^3.9.1",
     "vue-chart-3": "^3.1.8",
-    "vue-select": "^4.0.0-beta.6"
+    "vue-select": "^4.0.0-beta.6",
+    "vuedraggable": "^4.1.0"
   }
 }
