--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "dependencies": {
     "chart.js": "^3.9.1",
+    "maplibre-gl": "^5.1.0",
     "vue-chart-3": "^3.1.8",
+    "vue-maplibre-gl": "^5.3.8",
     "vue-select": "^4.0.0-beta.6",
     "vuedraggable": "^4.1.0"
   }
