Refactor localization files and update language handling
- Removed Romanian and Turkish localization files for authentication, messages, pagination, passwords, and validation.
- Added `laravel-vue-i18n` dependency to manage language loading in Vue components.
- Updated `Locales.vue` component to utilize the new language loading mechanism and improved dropdown functionality for language selection.
- Modified `app.js` to integrate `laravel-vue-i18n` for dynamic language resolution.
- Changed route sharing to use 'flag' instead of 'emoji' for locale representation.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "chart.js": "^3.9.1",
+    "laravel-vue-i18n": "^2.8.0",
     "maplibre-gl": "^5.1.0",
     "vue-chart-3": "^3.1.8",
     "vue-maplibre-gl": "^5.3.8",
