--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,9 @@ services:
     depends_on:
       - mariadb
       - meilisearch
+
   mariadb:
-    image: 'mariadb:10'
+    image: 'mariadb:latest'
     ports:
       - '${FORWARD_DB_PORT:-3306}:3306'
     environment:
@@ -45,6 +46,7 @@ services:
       test: ['CMD', 'mysqladmin', 'ping', '-p${DB_PASSWORD}']
       retries: 3
       timeout: 5s
+
   phpmyadmin:
     image: phpmyadmin
     expose:
@@ -65,7 +67,7 @@ services:
       - '${FORWARD_MEILISEARCH_PORT:-7700}:7700'
     environment:
       MEILI_NO_ANALYTICS: '${MEILISEARCH_NO_ANALYTICS:-false}'
-      MEILI_MASTER_KEY: '${MEILISEARCH_KEY}' 
+      MEILI_MASTER_KEY: '${MEILISEARCH_KEY}'
     volumes:
       - 'sail-meilisearch:/meili_data'
     networks:
@@ -83,6 +85,7 @@ services:
 networks:
   sail:
     driver: bridge
+
 volumes:
   sail-mariadb:
     driver: local
